Fixed more alignment issues

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -39,8 +39,7 @@
   margin-bottom: 30px;
 }
 .skills-image > img {
-  margin-left: 80px;
-  max-width: 90%;
+  max-width: 100%;
   height: auto;
 }
 
